return blob, fix fetch

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="main_image">
             <img src="" alt="" id="img">
         </div>
-        <button class="main_button" id="startbutton">
+        <button class="main_button" id="nextbutton">
             Gogogogo
         </button>
     </div>
