--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </button>
     </div>
 </body>
+<!-- Tensor Flow -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+<!-- p5 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
+<!-- ml5 -->
 <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-<script src="scripts/main.js" type="module" ></script>
+<script src="scripts/main.js" ></script>
 </html>
