--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
         <div class="main_image">
             <img src="" alt="" id="img">
         </div>
+        <div class="main_classifications">
+            <div class="main_classifications_item">
+                Sjuk
+            </div>
+            <div class="main_classifications_item">
+                Dunder
+            </div>
+            <div class="main_classifications_item">
+                Kanske
+            </div>
+        </div>
         <button class="main_button" id="nextbutton">
             Gogogogo
         </button>
     </div>
 </body>
-<!-- Tensor Flow -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
-<!-- p5 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 <!-- ml5 -->
 <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-<script src="scripts/main.js" ></script>
+<script src="scripts/main.js" type="module" ></script>
 </html>
